# Online-Store-OOP-Backend

./: .gitignore  README.md  SWE30003.sln  docker-compose.yml
Backend/: .env.example  Dockerfile  Program.cs  config.py  init.py  main.py  pyproject.toml  requirements.txt  terminal.py  testing.py
Backend/MySQL/: database_creation.sql
Backend/Properties/: launchSettings.json
Backend/db/: cart_data.json  item_data.json  mock_data.json  models.py  order_data.json  user_data.json
Backend/db/connection/: config.py  connection.py  helper.py  session.py
Backend/db/init/: 001-schema.sql  002-seed.sql
Backend/db/mock/: mock_data.json  order_data.json  user_data.json
Backend/db/repositories/: cart_repository.py  item_repository.py  transaction_repository.py  user_repository.py
Backend/models/: Saledoc.py  cart.py  cart_item.py  catalogue.py  format_items_table.py  item.py  itemss.py  order.py  product.py  sales_document.py  user.py  user_types.py
Backend/routes/: cart_routes.py  item_routes.py  order_routes.py  payment_routes.py  product_routes.py  user_routes.py
Backend/services/: cart_service.py  catalogue_service.py  item_service.py  order_service.py  payment_factory.py  payment_service.py  product_service.py  sales_service.py  terminal_payment_service.py  transaction_facade.py  user_service.py
Backend/tests/: conftest.py  test_cart_repository.py  test_cart_service.py  test_item_repository.py  test_main.py  test_transaction_repository.py  test_user_repository.py  test_user_service.py  test_userservice.py
Backend/utlities/: format_items_table.py
(+10 files in other folders)
