[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "cffi==2.0.0",
    "cryptography==46.0.5",
    "greenlet==3.3.2",
    "iniconfig==2.3.0",
    "mysql-connector-python==9.5.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pymysql==1.1.2",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.48",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]
